#Add the banchmark of simple algorithm
add_subdirectory(complex_multiply)
add_subdirectory(complex_update)
add_subdirectory(convolution)
add_subdirectory(dot_product)

add_subdirectory(fft)
add_subdirectory(fir)
add_subdirectory(fir2dim)
add_subdirectory(iir_biquad_N_sections)

add_subdirectory(iir_biquad_one_section)
add_subdirectory(lms)
add_subdirectory(matrix)
add_subdirectory(matrix1x3)

add_subdirectory(n_complex_updates)
add_subdirectory(n_real_updates)
add_subdirectory(real_update)
add_subdirectory(startup)
